@startuml Authentication & Session Management

!theme plain
skinparam linetype ortho
skinparam backgroundColor #FFFFFF
skinparam classBackgroundColor #F8F9FA
skinparam classBorderColor #DEE2E6

entity "users" as users {
  * **id** : BIGINT <<PK>>
  --
  * username : VARCHAR(50)
  * email : VARCHAR(255)
}

entity "user_sessions" as sessions {
  * **id** : BIGINT <<PK>>
  --
  * user_id : BIGINT <<FK>>
  * session_token : VARCHAR(255) <<UK>>
  refresh_token : VARCHAR(255) <<UK>>
  device_id : VARCHAR(255)
  ip_address : VARCHAR(45)
  user_agent : TEXT
  location : VARCHAR(255)
  is_active : BOOLEAN DEFAULT TRUE
  * last_activity_at : TIMESTAMP
  * expires_at : TIMESTAMP
  * created_at : TIMESTAMP
}

entity "user_devices" as devices {
  * **id** : BIGINT <<PK>>
  --
  * user_id : BIGINT <<FK>>
  * device_id : VARCHAR(255) <<UK>>
  device_name : VARCHAR(255)
  * device_type : ENUM('web','mobile','tablet','desktop')
  platform : VARCHAR(50)
  browser : VARCHAR(100)
  is_trusted : BOOLEAN DEFAULT FALSE
  push_token : VARCHAR(500)
  * last_used_at : TIMESTAMP
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}



users ||--o{ sessions : "has sessions"
users ||--o{ devices : "has devices"


@enduml